# Notes_in_SQ

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start.bat
notes_app/: __init__.py  config.py  database.py  excel.py  logging_config.py  service.py  web.py
notes_app/static/: app.css  app.js  terminations.js
notes_app/templates/: index.html
notes_app/terminations/: __init__.py  analysis.py  config.py  database.py  excel_ingest.py  mongo_client.py  output.py  report_builder.py  service.py  web.py
scripts/: create_demo_data.py
tests/: conftest.py  test_config.py  test_excel.py  test_frontend_selectors.py  test_index.py  test_terminations_analysis.py  test_terminations_database.py  test_terminations_excel_ingest.py  test_terminations_mongo_client.py  test_terminations_report_builder.py  test_terminations_service.py  test_terminations_web.py
