[project]
name = "noteflow"
version = "2.0.2"
description = "Локальная подготовка Excel-отчётов Note trades SQ"
requires-python = ">=3.10"
dependencies = [
    "Flask==2.2.3",
    "openpyxl==3.1.0",
    "colorama==0.4.6",
    "pandas==2.2.3",
    "python-calamine==0.6.2",
    "pymongo==4.3.3",
    "python-dotenv==1.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
